@@ -11,6 +11,7 @@ Next version
 ------------
 
 Changes:
+* Add a new quest!
 * Add Black Market, an end-game shop to spend all excess gold in.
 * Add game lore and fiction to the Doc folder.
 * Magic helmets spawn with random material.
@@ -18,6 +19,10 @@ Changes:
 * New "expansive terrain" can help prevent blocking important entrances.
 * Improve item search algorithm.
 * Keys very rarely break when used.
+* Add new ROOM_OWNED_AREA type for generic owned rooms. Uses code similar to
+  the Cathedral or Decos' house.
+* Add crysteel.
+* Orcs have black blood.
 
 Fixes:
 * Clean up code.
@@ -27,6 +32,12 @@ Fixes:
 * Do not aggressively upgrade dependencies for mac build.
 * Mirrored items cannot be dismantled into permanent lump of material.
 * Stop weapon swap from auto-stealing items in shops.
+* Decos no longer lets you steal from him.
+
+Aslona:
+* A new main quest will see you trying to bring peace back to the kingdom of
+  Aslona, currently in the middle of a civil war.
+* Add Aslona Castle, Rebel Camp and Goblin Fort.
 
 Version 0.56, released 19th February 2019
 -----------------------------------------
